# awesome-programming-resources

./: .clang-format  .gitignore  README.md
substack/: README.md
substack/cache-check/: CMakeLists.txt  testCycles.cpp  testTrash.cpp  testcopy.cpp
substack/calculator/: CMakeLists.txt  Calculator.h  FunctionOps.h  Lexer.h  Node.h  Pointer.h  Predicates.h  TreeNodes.h  Writer.h  calculator.cpp
substack/compile-time-switch/: CMakeLists.txt  Codegen.cmake  caller_caleth.cpp  caller_fred.cpp  caller_fred2.cpp  caller_trivial.cpp  codegen.py  functions.cpp  functions.h  main.cpp  switch.mako.cpp  utils.h
